--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>ITALO CALVINO</h1>   
         </section>
         <section class="top">
-            <img src="italo calvino.avif" alt="">
+            <img src="/italo calvino.avif" alt="">
             
         </section>
         <section class="colore-1"> 
@@ -38,7 +38,7 @@
                    </p>
                    </div>
                    <div class="itcal">
-                <img src="it.cal.1.png">
+                <img src="/it.cal.1.png">
             </div>
         </section>
         <section class="newedition">
