--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>ITALO CALVINO</h1>   
         </section>
         <section class="top">
-            <img src="/italo calvino.avif" alt="">
+            <img src="italo calvino.avif" alt="">
             
         </section>
         <section class="colore-1"> 
@@ -38,7 +38,7 @@
                    </p>
                    </div>
                    <div class="itcal">
-                <img src="/it.cal.1.png">
+                <img src="it.cal.1.png">
             </div>
         </section>
         <section class="newedition">
@@ -51,7 +51,7 @@
                 Cecilia Flegenheimer, art director di Mondadori, descrive il caso come la richiesta di “copertine narrative, calde, non concettuali, che trattassero italo Calvino come un brand riconoscibile” 
                    </p>
                    <div class="Cecilia">
-                    <img src="/cec.flag.1.png">
+                    <img src="cec.flag.1.png">
                 </div> 
             </div>
         </section>
@@ -62,7 +62,7 @@
                     Lo stile è semplice e minimalista, ricco di illustrazioni che sintetizzano l’essenza dei romanzi di Calvino.</p>
             </div>
             <div class="Jack">
-                <img src="/Jack-Smyth.jpeg">
+                <img src="Jack-Smyth.jpeg">
             </div> 
         </section>
 
